# teruterubozu

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml  weather-check.yml
backend/: main.py  notifier.py  scheduler.py  weather.py
tests/: test_notifier.py  test_scheduler.py  test_weather.py
