[project]
name = "teruterubozu"
version = "0.1.0"
description = ""
authors = [
    {name = "kangminsung",email = "nonasking@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "requests (>=2.32.0,<3.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
