[project]
name = "teruterubozu"
version = "0.1.0"
description = ""
authors = [
    {name = "kangminsung",email = "nonasking@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "requests (>=2.32.0,<3.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "pydantic (>=2.13.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--cov=backend --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["backend"]
omit = ["backend/main.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = ["E501"]  # line-length handled by formatter

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "ruff (>=0.14.5,<0.15.0)"
]
